@@ -49,6 +49,11 @@ public:
 	static const string toModifiedUTF7(const char hierarchySeparator, const folder::path::component& text);
 	static const folder::path::component fromModifiedUTF7(const string& text);
 
+	/** Quote string if it contains IMAP-special characters.
+	  *
+	  * @param text string to quote
+	  * @return quoted string
+	  */
 	static const string quoteString(const string& text);
 
 	static const int folderTypeFromFlags(const IMAPParser::mailbox_flag_list* list);
@@ -58,9 +63,36 @@ public:
 
 	static const string messageFlagList(const int flags);
 
-	static const string listToSet(const std::vector <int>& list, const int max = -1, const bool alreadySorted  = false);
+	/** Build an "IMAP set" given a list. The function tries to group
+	  * consecutive message numbers to reduce the list.
+	  *
+	  * Example:
+	  *    IN  = "1,2,3,4,5,7,8,13,15,16,17"
+	  *    OUT = "1:5,7:8,13,15:*" for a mailbox with a total of 17 messages (max = 17)
+	  *
+	  * @param list list of message numbers
+	  * @param max number of messages in the mailbox (or -1 if not known)
+	  * @param alreadySorted set to true if the list of message numbers is
+	  * already sorted in ascending order
+	  * @return a set corresponding to the message list
+	  */
+	static const string listToSet(const std::vector <int>& list,
+		const int max = -1, const bool alreadySorted = false);
 
+	/** Format a date/time to IMAP date/time format.
+	  *
+	  * @param date date/time to format
+	  * @return IMAP-formatted date/time
+	  */
 	static const string dateTime(const vmime::datetime& date);
+
+	/** Construct a fetch request for the specified messages.
+	  *
+	  * @param list list of message numbers
+	  * @param options fetch options
+	  * @return fetch request
+	  */
+	static const string buildFetchRequest(const std::vector <int>& list, const int options);
 };
 
 
